Tools/TestRunnerShared/UIScriptContext/UIScriptController.cpp
@@ -241,6 +241,10 @@ void UIScriptController::setMinimumEffectiveWidth(double)
 {
 }
 
+void UIScriptController::setAllowsViewportShrinkToFit(bool)
+{
+}
+
 void UIScriptController::resignFirstResponder()
 {
 }
